--- a/Business/BusinessInterface/build.gradle
+++ b/Business/BusinessInterface/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     annotationProcessor project(path: ':RouteCompiler')
     //ServiceLoader
     implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.3'
+    implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderAnnotations:1.4.3'
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 }
