--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:4.2.1'
+        //classpath 'com.android.tools.build:gradle:3.2.1'
         //jitpack
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         //自定义插件
