--- a/ToolLib/AnimatorToolLib/build.gradle
+++ b/ToolLib/AnimatorToolLib/build.gradle
@@ -1,6 +1,7 @@
-plugins {
-    id 'com.android.library'
-}
+//plugins {
+//    id 'com.android.library'
+//}
+apply plugin: 'com.android.library'
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
 //迁移到jitpack
 apply plugin: 'com.github.dcendents.android-maven'
