--- a/gradle.properties
+++ b/gradle.properties
@@ -15,10 +15,16 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-android.enableAapt2=false
+android.enableAapt2=true
+# Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 android.useAndroidX=true
 
+
+# import androidx.databinding.DataBindingComponent; 找不到。不能这样操作，会导致功能不可用
+# https://stackoverflow.com/a/52550118/8655667
+# android.enableExperimentalFeatureDatabinding=true
+# android.databinding.enableV2=false
 
 
 
