--- a/Business/JetpackBusiness/build.gradle
+++ b/Business/JetpackBusiness/build.gradle
@@ -70,8 +70,18 @@ dependencies {
     // Kotlin coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+    // koin框架
+    implementation "org.koin:koin-core:2.2.0"
+    implementation "org.koin:koin-android:2.2.0"
+    implementation "org.koin:koin-android-viewmodel:2.2.0"
     // jetpack系列
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation "androidx.navigation:navigation-fragment-ktx:2.0.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.0.0"
+    // liveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-core:2.2.0"
+    // viewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 }
