--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:label="@string/app_yc_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config_debug"
         tools:replace="android:theme,android:label,android:allowBackup,android:name"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name="com.yc.lifehelper.SplashActivity"
