--- a/Business/JetpackBusiness/build.gradle
+++ b/Business/JetpackBusiness/build.gradle
@@ -68,7 +68,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     // Kotlin coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
     // koin框架
     implementation "org.koin:koin-core:2.2.0"
