--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply from: "yc.gradle"
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    apply from: 'yc.gradle'
     repositories {
         google()
         jcenter()
