--- a/settings.gradle
+++ b/settings.gradle
@@ -5,10 +5,10 @@ include ':app'
 /* +++++++++ 业务组件层 +++++++++ */
 include ':GameBusiness', ':AnimBusiness',':LeetBusiness',':MvvmDatabinding',
         ':VideoBusiness', ':DemoBusiness', ':MvpTodoBusiness',':MvvmTodoLive',
-        ':MvcTodoBusiness',':JetpackBusiness',//':AndroidBusiness',
+        ':MvcTodoBusiness',':JetpackBusiness',':AndroidBusiness',
         ':BusinessInterface'
 project(':GameBusiness').projectDir = new File('Business/GameBusiness')
-//project(':AndroidBusiness').projectDir = new File('Business/AndroidBusiness')
+project(':AndroidBusiness').projectDir = new File('Business/AndroidBusiness')
 project(':JetpackBusiness').projectDir = new File('Business/JetpackBusiness')
 project(':VideoBusiness').projectDir = new File('Business/VideoBusiness')
 project(':DemoBusiness').projectDir = new File('Business/DemoBusiness')
