--- a/Business/AndroidBusiness/src/main/AndroidManifest.xml
+++ b/Business/AndroidBusiness/src/main/AndroidManifest.xml
@@ -5,15 +5,15 @@
 
     <application>
         <activity android:name="com.ycbjie.android.view.activity.AndroidActivity"/>
-        <activity android:name=".view.activity.AndroidDetailActivity"/>
-        <activity android:name=".view.activity.AndroidAboutActivity"/>
-        <activity android:name=".view.activity.AndroidLoginActivity"/>
-        <activity android:name=".view.activity.AndroidSearchActivity"/>
-        <activity android:name=".view.activity.KnowledgeTreeDetailActivity"/>
-        <activity android:name=".view.activity.NavWebsiteActivity"/>
-        <activity android:name=".view.activity.AndroidCollectActivity"/>
-        <activity android:name=".view.activity.AndroidRegisterActivity"/>
-        <activity android:name=".view.activity.CollectNetActivity"/>
+        <activity android:name="com.ycbjie.android.view.activity.AndroidDetailActivity"/>
+        <activity android:name="com.ycbjie.android.view.activity.AndroidAboutActivity"/>
+        <activity android:name="com.ycbjie.android.view.activity.AndroidLoginActivity"/>
+        <activity android:name="com.ycbjie.android.view.activity.AndroidSearchActivity"/>
+        <activity android:name="com.ycbjie.android.view.activity.KnowledgeTreeDetailActivity"/>
+        <activity android:name="com.ycbjie.android.view.activity.NavWebsiteActivity"/>
+        <activity android:name="com.ycbjie.android.view.activity.AndroidCollectActivity"/>
+        <activity android:name="com.ycbjie.android.view.activity.AndroidRegisterActivity"/>
+        <activity android:name="com.ycbjie.android.view.activity.CollectNetActivity"/>
     </application>
 
 
