--- a/Business/JetpackBusiness/src/main/AndroidManifest.xml
+++ b/Business/JetpackBusiness/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity android:name="com.yc.jetpack.ui.activity.LoginActivity"/>
         <activity android:name="com.yc.jetpack.ui.activity.JetpackActivity"/>
+        <activity android:name="com.yc.jetpack.study.navigation.NavigationActivity"/>
     </application>
 
 </manifest>
