--- a/ToolLib/ZxingServerLib/build.gradle
+++ b/ToolLib/ZxingServerLib/build.gradle
@@ -32,7 +32,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation(rootProject.ext.dependencies["appcompat"])
+    implementation(rootProject.ext.dependencies["annotation"])
     implementation rootProject.ext.dependencies["zxing"]
     implementation rootProject.ext.dependencies["utilcode"]
 
