--- a/app/build.gradle
+++ b/app/build.gradle
@@ -233,6 +233,7 @@ dependencies {
     implementation project(path: ':BusinessInterface')
     implementation project(path: ':ThreadPoolLib')
     implementation project(path: ':JetpackBusiness')
+    implementation project(path: ':AndroidBusiness')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
