--- a/yc.gradle
+++ b/yc.gradle
@@ -8,8 +8,7 @@ ext {
     isAndroidApplication = false  //玩Android模块开关，false:作为Lib组件存在， true:作为application存在
     isGankApplication = false  //干货模块开关，false:作为Lib组件存在， true:作为application存在
     isAnimApplication = false
-
-
+    
     android = [
             compileSdkVersion: 29,
             buildToolsVersion: "29.0.0",
@@ -19,77 +18,74 @@ ext {
             versionName      : "1.8.2"    //必须是int或者float，否则影响线上升级
     ]
 
-    version = [
-            retrofitSdkVersion: "2.4.0",
-            glideSdkVersion   : "4.9.0",
-            canarySdkVersion  : "1.5.4",
-            constraintVersion : "1.0.2",
-            okhttp            : "4.7.2",
-            zxing_version     : "3.3.3"
-    ]
-
-
-    coordinatorlayoutVersion = '1.0.0'
-    appcompatVersion = '1.2.0'
-    constraintlayoutVersion = '1.1.3'
-    roomVersion = '2.0.0'
-    annotationVersion = '1.1.0'
-    cardviewVersion = '1.0.0'
-    recyclerviewVersion = '1.0.0'
-    mediaVersion = '1.0.1'
-    materialVersion = '1.0.0-rc01'
-    swiperefreshlayoutVersion = '1.0.0'
-    archLifecycleVersion = '2.0.0'
-    databindingVersion = '3.2.1'
-    coreVersion = '1.0.0'
-
-
     //AndroidX系列
-    annotation = "androidx.appcompat:appcompat:$appcompatVersion"
-    appcompat = "androidx.annotation:annotation:$appcompatVersion"
-    coordinatorlayout = "androidx.coordinatorlayout:coordinatorlayout:${coordinatorlayoutVersion}"
-    constraintlayout = "androidx.constraintlayout:constraintlayout:${constraintlayoutVersion}"
+    appcompatVersion = '1.2.0'
+    annotationVersion = '1.2.0'
+    cardviewVersion = '1.0.0'
+    mediaVersion = '1.0.1'
+    swiperefreshlayoutVersion = '1.0.0'
+    materialVersion = '1.0.0-rc01'
+    coordinatorlayoutVersion = '1.0.0'
+    constraintlayoutVersion = '1.1.3'
+    recyclerviewVersion = '1.0.0'
+    multidexVersion = '1.0.2'
 
     //kotlin系列
     kotlin_version = '1.4.31'
     kotlinxVersion = '1.0.1'
-    kotlinxCoroutinesCore = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxVersion"
-    kotlinxCoroutinesAndroid = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinxVersion"
+
 
     //jetpack系列
+    coreVersion = '1.0.0'
+    databindingVersion = '3.2.1'
+    lifecycleVersion = '2.2.0'
+    archLifecycleVersion = '2.2.0'
+    roomVersion = '2.0.0'
 
     //第三方库系列
+    retrofitSdkVersion = "2.4.0"
+    glideSdkVersion = "4.9.0"
+    okhttpVersion = "4.7.2"
+    gsonVersion = "2.8.5"
+    zxingVersion = "3.3.3"
+    permissionsVersion = "1.0.1"
 
     dependencies = [
-            coordinatorlayout         : "androidx.coordinatorlayout:coordinatorlayout:${coordinatorlayoutVersion}",
+            //AndroidX系列
             appcompat                 : "androidx.appcompat:appcompat:${appcompatVersion}",
-            constraintlayout          : "androidx.constraintlayout:constraintlayout:${constraintlayoutVersion}",
             annotation                : "androidx.annotation:annotation:${annotationVersion}",
+            constraintlayout          : "androidx.constraintlayout:constraintlayout:${constraintlayoutVersion}",
+            coordinatorlayout         : "androidx.coordinatorlayout:coordinatorlayout:${coordinatorlayoutVersion}",
             cardview                  : "androidx.cardview:cardview:${cardviewVersion}",
             recyclerview              : "androidx.recyclerview:recyclerview:${recyclerviewVersion}",
             media                     : "androidx.media:media:${mediaVersion}",
             material                  : "com.google.android.material:material:${materialVersion}",
             swiperefreshlayout        : "androidx.swiperefreshlayout:swiperefreshlayout:${swiperefreshlayoutVersion}",
+            "multidex"                : "com.android.support:multidex:$multidexVersion",
+
+            //jetpack系列
             core                      : "androidx.core:core:${coreVersion}",
-            "multidex"                : "com.android.support:multidex:1.0.2",
-            "room-runtime"            : "androidx.room:room-runtime:${roomVersion}",
-            "room-compiler"           : "androidx.room:room-compiler:${roomVersion}",
-            "databinding"             : "androidx.databinding:databinding-common:${databindingVersion}",
-            "lifecycle"               : "androidx.lifecycle:lifecycle-extensions:${archLifecycleVersion}",
-            "lifecycle-compiler"      : "androidx.lifecycle:lifecycle-compiler:${archLifecycleVersion}",
+            roomRuntime            : "androidx.room:room-runtime:${roomVersion}",
+            roomCompiler           : "androidx.room:room-compiler:${roomVersion}",
+            databinding               : "androidx.databinding:databinding-common:${databindingVersion}",
+            lifecycle                 : "androidx.lifecycle:lifecycle-extensions:${archLifecycleVersion}",
+            lifecycleCompiler      : "androidx.lifecycle:lifecycle-compiler:${archLifecycleVersion}",
+            lifecycleRuntime          : "androidx.lifecycle:lifecycle-runtime:${archLifecycleVersion}",
+
+            //kotlin
+            kotlinxCoroutinesCore     : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxVersion",
+            kotlinxCoroutinesAndroid  : "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinxVersion",
 
             //network
-            "retrofit"                : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
-            "retrofit-converter-gson" : "com.squareup.retrofit2:converter-gson:${version["retrofitSdkVersion"]}",
-            "retrofit-adapter-rxjava2": "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
-            "okhttp"                  : "com.squareup.okhttp3:okhttp:${version["okhttp"]}",
-            "rxandroid2"              : "io.reactivex.rxjava2:rxandroid:2.1.0",
-            "rxjava2"                 : "io.reactivex.rxjava2:rxjava:2.1.11",
-            "gson"                    : "com.google.code.gson:gson:2.8.5",
-
-            //image
-            "glide"                   : "com.github.bumptech.glide:glide:${version["glideSdkVersion"]}",
-            "glide-compiler"          : "com.github.bumptech.glide:compiler:${version["glideSdkVersion"]}",
+            retrofit                  : "com.squareup.retrofit2:retrofit:$retrofitSdkVersion",
+            "retrofit-converter-gson" : "com.squareup.retrofit2:converter-gson:$retrofitSdkVersion",
+            "retrofit-adapter-rxjava2": "com.squareup.retrofit2:adapter-rxjava2:$retrofitSdkVersion",
+            okhttp                    : "com.squareup.okhttp3:okhttp:$okhttpVersion",
+            rxandroid2              : "io.reactivex.rxjava2:rxandroid:2.1.0",
+            rxjava2                 : "io.reactivex.rxjava2:rxjava:2.1.11",
+            gson                      : "com.google.code.gson:gson:$gsonVersion",
+            glide                     : "com.github.bumptech.glide:glide:$glideSdkVersion",
+            "glide-compiler"          : "com.github.bumptech.glide:compiler:$glideSdkVersion",
 
 
             //yc
@@ -100,8 +96,8 @@ ext {
 
             //tools
             "utilcode"                : "com.blankj:utilcode:1.12.5",
-            "easypermissions"         : "pub.devrel:easypermissions:1.0.1",
-            "zxing"                   : "com.google.zxing:core:${version["zxing_version"]}",
+            "easypermissions"         : "pub.devrel:easypermissions:$permissionsVersion",
+            zxing                     : "com.google.zxing:core:$zxingVersion",
     ]
 
 }
