--- a/Business/JetpackBusiness/src/main/module/AndroidManifest.xml
+++ b/Business/JetpackBusiness/src/main/module/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.yc.jetpack.ui.activity.LoginActivity">
+        <activity android:name="com.yc.jetpack.ui.activity.JetpackActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.yc.jetpack.ui.activity.JetpackActivity"/>
+        <activity android:name="com.yc.jetpack.study.navigation.NavigationActivity"/>
+        <activity android:name="com.yc.jetpack.study.livedata.LiveDataActivity"/>
     </application>
 
 </manifest>
