--- a/Business/JetpackBusiness/src/main/AndroidManifest.xml
+++ b/Business/JetpackBusiness/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="com.yc.jetpack">
 
     <application>
-        <activity android:name="com.yc.jetpack.ui.activity.LoginActivity"/>
         <activity android:name="com.yc.jetpack.ui.activity.JetpackActivity"/>
         <activity android:name="com.yc.jetpack.study.navigation.NavigationActivity"/>
+        <activity android:name="com.yc.jetpack.study.livedata.LiveDataActivity"/>
     </application>
 
 </manifest>
