--- a/Business/JetpackBusiness/src/main/module/AndroidManifest.xml
+++ b/Business/JetpackBusiness/src/main/module/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name="com.yc.jetpack.study.navigation.NavigationActivity"/>
         <activity android:name="com.yc.jetpack.study.livedata.LiveDataActivity"/>
+        <activity android:name="com.yc.jetpack.study.model.ViewModelActivity"/>
     </application>
 
 </manifest>
