--- a/CommonLib/AppStartLib/build.gradle
+++ b/CommonLib/AppStartLib/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.library'
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
-//迁移到jitpack
-apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -30,4 +28,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.7'
 }
