--- a/CommonLib/AppLogLib/build.gradle
+++ b/CommonLib/AppLogLib/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.library'
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
-//迁移到jitpack
-apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -28,7 +26,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-    implementation 'com.github.yangchong211.YCEfficient:AppProcessLib:1.3.1'
+    implementation 'androidx.annotation:annotation:1.1.0'
 }
