--- a/WidgetLib/RoundCorners/build.gradle
+++ b/WidgetLib/RoundCorners/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.library'
-apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
-//迁移到jitpack
 apply plugin: 'com.github.dcendents.android-maven'
+apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -13,22 +12,17 @@ android {
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
     }
-
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation rootProject.ext.dependencies["appcompat"]
-    implementation rootProject.ext.dependencies["annotation"]
-    implementation 'com.github.yangchong211.YCEfficient:AppProcessLib:1.3.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation(rootProject.ext.dependencies["appcompat"])
+    implementation(rootProject.ext.dependencies["annotation"])
+    implementation(rootProject.ext.dependencies["constraintlayout"])
 }
